versioned_docs/version-2024.1.9/sala/bloco_2/sala_11-2.mdx
---
slug: /sala/sala_11-2
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Sala 11-2",
  base: "Bloco 2",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Sociologia 4",
          size: 2,
          teachers: [
            "Fagner Guglielmi Pereira"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "Filosofia 4",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "11:05 - 11:55",
          color: ""
        },
        {
          subject: "Equipamentos elétricos e Sistema elétricos de potência",
          size: 4,
          teachers: [
            "Danilo Hungaro Micheletti"
          ],
          classroom: "Sala 11-2",
          students: [
            "ELE2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Biologia 4",
          size: 3,
          teachers: [
            "Leandro Luiz Borges"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "História 4",
          size: 2,
          teachers: [
            "Suzane Conceição Pantolfi Tostes"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Legislação e Ética Profissional",
          size: 4,
          teachers: [
            "Amilcar Machado Profeta Filho"
          ],
          classroom: "Sala 11-2",
          students: [
            "ELE2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Geografia 4",
          size: 2,
          teachers: [
            "Alexandre Roberto Valcarenghi"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Sala 11-2

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
