versioned_docs/version-2024.2.3/sala/bloco_2/sala_11-2.mdx
---
slug: /sala/sala_11-2
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Sala 11-2",
  base: "Bloco 2",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Filosofia 4",
          size: 1,
          teachers: [
            "José Jurandir Pereira Junior"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Artes 3",
          size: 1,
          teachers: [
            "Josiane Paula Maltauro"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "08:20 - 09:10",
          color: ""
        },
        {
          subject: "Sociologia 4",
          size: 1,
          teachers: [
            "Fagner Guglielmi Pereira"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "09:25 - 10:15",
          color: ""
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Biologia 4",
          size: 2,
          teachers: [
            "Leandro Luiz Borges"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Projeto Integrador",
          size: 1,
          teachers: [
            "Kátia Cristiane Kobus Novaes"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "Empreendedorismo (PPC2020)",
          size: 2,
          teachers: [
            "Haroldo Yutaka Misunaga"
          ],
          classroom: "Sala 11-2",
          students: [
            "ELE2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Manutenção Industrial e Gestão da Produção",
          size: 1,
          teachers: [
            "Luiz Inácio Chaves"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Máquinas Térmicas e de Fluxo",
          size: 2,
          teachers: [
            "Luiz Inácio Chaves"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "08:20 - 09:10",
          color: ""
        },
        {
          subject: "Geografia 4",
          size: 2,
          teachers: [
            "Alexandre Roberto Valcarenghi"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "10:15 - 11:05",
          color: ""
        },
        {
          subject: "Energias alternativas (PPC2020)",
          size: 4,
          teachers: [
            "Danilo Hungaro Micheletti"
          ],
          classroom: "Sala 11-2",
          students: [
            "ELE2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Lingua Estrangeira Moderna 3 - Inglês",
          size: 1,
          teachers: [
            "Celina de Oliveira Barbosa Gomes"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Lingua Portuguesa 4",
          size: 2,
          teachers: [
            "Kátia Cristiane Kobus Novaes"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "08:20 - 09:10",
          color: ""
        },
        {
          subject: "Conservação de Recursos Naturais (PPC2020)",
          size: 2,
          teachers: [
            "Cesar Gomes de Freitas"
          ],
          classroom: "Sala 11-2",
          students: [
            "ELE2023"
          ],
          time: "19:00 - 19:50",
          color: ""
        },
        {
          subject: "Gestão da Produção",
          size: 2,
          teachers: [
            "Cesar Gomes de Freitas"
          ],
          classroom: "Sala 11-2",
          students: [
            "ELE2023"
          ],
          time: "21:00 - 21:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "História 4",
          size: 2,
          teachers: [
            "Suzane Conceição Pantolfi Tostes"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Matemática 4",
          size: 3,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2021"
          ],
          time: "09:25 - 10:15",
          color: ""
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Sala 11-2

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
